RESOLVED FIXED 262956
[WGSL] Fix argument buffer generation when using explicit layouts
https://bugs.webkit.org/show_bug.cgi?id=262956
Summary [WGSL] Fix argument buffer generation when using explicit layouts
Tadeu Zagallo
Reported 2023-10-10 08:01:00 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-10 08:01:16 PDT
Tadeu Zagallo
Comment 2 2023-10-10 11:34:45 PDT
EWS
Comment 3 2023-10-16 18:50:33 PDT
Committed 269392@main (baa3a7fc959a): <https://commits.webkit.org/269392@main> Reviewed commits have been landed. Closing PR #18898 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.