Source/WebGPU/WGSL/WGSL.h
@@ -210,6 +210,7 @@ struct SpecializationConstant {
 
 struct EntryPointInformation {
     // FIXME: This can probably be factored better.
+    String originalName;
     String mangledName;
     std::optional<PipelineLayout> defaultLayout; // If the input PipelineLayout is nullopt, the compiler computes a layout and returns it. https://gpuweb.github.io/gpuweb/#default-pipeline-layout
     HashMap<std::pair<size_t, size_t>, size_t> bufferLengthLocations; // Metal buffer identity -> offset within helper buffer where its size needs to lie
